internal/gitops/testdata/loki-dev/expected/apps/dev/loki/ingressroute-loki-loki-gateway.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: loki-gateway
  namespace: loki
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`loki-crop-dev.phibred.com`)
    services:
    - name: loki-gateway
      port: 80
  tls:
    secretName: loki-gateway-tls
