internal/gitops/testdata/loki-dev/expected/apps/dev/loki/sealedsecret-loki-loki-gateway-tls.yaml
apiVersion: bitnami.com/v1alpha1
kind: SealedSecret
metadata:
  name: loki-gateway-tls
  namespace: loki
spec:
  encryptedData:
    tls.crt: AgAoD984u8holjv/Xshp7j/iyzq66St+L+W3oTwZNd/B44XOyYdjubGCykkJM7Uv0Lki6MOCgzQ8jhCISx/3GzQ4Op4aYKAY0wYWCzgeCE8+lJ9YYY5pXJcDnvCFGFmW1NIid133WBUa+O+dr2ZcKQEQ3ONw5W//3sOoFk5FwjLCzuktVgse4HQi9HYc3OC9WaQhu1pbYdNBbUKMj3GDIN2eefKnjgtg/RBZLkA+GlCZtDyfyLIKmswvaJQaHx2OyIFFOKr4dPxmTPFrdCHn/EpfKubuQa0vvhwpjEs5clpuu7NTyMNZHSxZ0nPBpDnN9hAqhPWaqUIcmMrAfbxfZg02NnZpbqz8zPeowqgFYYg/GYXh9bEsE0Jq6MOEJhT1SuJflDo8MHz9l35zHCuNz5f+EUhw+xjP43v7qc6KI2aZrCrT+MWwfzNz26DYL14EvJJhrldp9hpEfouSbxWYXZ/cW/2lILDlxVHc2FO [...]
    tls.key: AgA9tqn4R4fELo9isic2fvEQZN7m/y+XxBpg8iPadQ7koGqKE4rydQHkq58J9xVWmU/gyg1TNi65ym9zuThakdMBRyx8bF4CpCiOq9UN6tVaQQs1tdZd3eT4gbsIq4o4JnQoTZo4QAIuJen2nadKdIN7ttpJtaD/a6O/9kKiWtLyAF9TaA1ho1JEEq5Hdu/zNdByL4MNST4DdezzwFxMx9eFhBr3Qd7vo3UEjVAOawnRjFI6P7ixfWRwLJ2DcdKG9Pl7tYW6+gbU7CNI0IRjghlxP6w9d4zAWfMYEbHvgq1LfNSnAkiVvYOZjd6WfWaK0KW72HXar9OhdYNuCkfR02zhIOUMaLNsAXIrzcosF1mVORuOqeMeF9BsQ8K987cLV5InvAM4+Z3RwdlLH2n/4SpT9Co5X1twQlb9bkrQoNOSTkpV7O7PW5OT2sTzEJJ+sPP+KHMh4sepbhcZLOPkp1l+lfICn0KN3clQ79l [...]
  template:
    metadata:
      name: loki-gateway-tls
      namespace: loki
    type: kubernetes.io/tls
